--- a/src/main/webapp/admin/harrastajat/vyökokeet.xhtml
+++ b/src/main/webapp/admin/harrastajat/vyökokeet.xhtml
@@ -17,7 +17,7 @@
 			</h:outputText>
 		</ace:column>
 		<ace:column headerText="Päiviä välissä">
-			<h:outputText value="#{_vyöokoe.aikaaValissa}" />
+			<h:outputText value="#{_vyökoe.aikaaVälissä}" />
 		</ace:column>
 		<ace:column headerText="Seuraavaan kokeeseen">
 			<h:panelGrid columns="2" rendered="#{_vyökoe.tuoreinVyökoe}">
