--- a/src/main/webapp/admin/harrastajat/harrastajat.xhtml
+++ b/src/main/webapp/admin/harrastajat/harrastajat.xhtml
@@ -2,7 +2,9 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:ace="http://www.icefaces.org/icefaces/components">
 	<h:commandButton action="#{harrastajaAdmin.lisääHarrastaja}" value="x" styleClass="ikoni"
-		image="/kuvat/lisää_käyttäjä.png" immediate="true" />
+		image="/kuvat/lisää.png" immediate="true">
+		<f:ajax render="@form" />
+	</h:commandButton>
 	<ace:dataTable value="#{harrastajat}" var="_harrastaja" selectionMode="single"
 		stateMap="#{harrastajaAdmin.rowStateMap}" rows="10" rowSelectListener="#{harrastajaAdmin.harrastajaValittu}">
 		<ace:column headerText="Etunimi" sortBy="#{_harrastaja.henkilö.etunimi}" filterBy="#{_harrastaja.henkilö.etunimi}"
