--- a/src/main/webapp/admin/harrastajat/vyökokeet.xhtml
+++ b/src/main/webapp/admin/harrastajat/vyökokeet.xhtml
@@ -1,7 +1,7 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:ace="http://www.icefaces.org/icefaces/components">
-	<h:commandButton action="#{vyökoeAdmin.lisääVyökoe(harrastaja)}" value="x" styleClass="ikoni" image="/kuvat/lisää_vyö.png"
+	<h:commandButton action="#{vyökoeAdmin.lisääVyökoe(harrastaja)}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
 		immediate="true" />
 	<ace:dataTable value="#{harrastaja.vyökokeet}" var="_vyökoe" selectionMode="single" rows="10"
 		rowSelectListener="#{vyökoeAdmin.vyökoeValittu}">
