--- a/src/main/webapp/admin/treenit/treenit.xhtml
+++ b/src/main/webapp/admin/treenit/treenit.xhtml
@@ -2,7 +2,9 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:ace="http://www.icefaces.org/icefaces/components">
 	<h:commandButton action="#{treeniAdmin.lisääTreeni}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
-		immediate="true" />
+		immediate="true">
+		<ace:ajax render="@form" />
+	</h:commandButton>
 	<ace:dataTable value="#{treenit}" var="_treeni" selectionMode="single" stateMap="#{treeniAdmin.rowStateMap}" rows="10"
 		rowSelectListener="#{treeniAdmin.treeniValittu}">
 		<ace:column headerText="Nimi">
@@ -89,7 +91,9 @@
 	<h:commandButton rendered="#{treeni != null}" value="x" styleClass="ikoni" action="#{treeniAdmin.tallennaTreeni()}"
 		image="/kuvat/tallenna.jpg" />
 	<h:commandButton rendered="#{treeni != null}" value="x" styleClass="ikoni" action="#{treeniAdmin.peruutaMuutos}"
-		image="/kuvat/peruuta_muutos.png" />
+		image="/kuvat/peruuta_muutos.png">
+		<ace:ajax render="@form" />
+	</h:commandButton>
 	<h:commandButton rendered="#{treeni.poistettavissa}" value="x" styleClass="ikoni" action="#{treeniAdmin.poistaTreeni}"
 		image="/kuvat/poista.png" immediate="true" />
 
