--- a/src/main/webapp/admin/harrastajat/vyökokeet.xhtml
+++ b/src/main/webapp/admin/harrastajat/vyökokeet.xhtml
@@ -2,7 +2,9 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:ace="http://www.icefaces.org/icefaces/components">
 	<h:commandButton action="#{vyökoeAdmin.lisääVyökoe(harrastaja)}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
-		immediate="true" />
+		immediate="true">
+		<ace:ajax render="@form" />
+	</h:commandButton>
 	<ace:dataTable value="#{harrastaja.vyökokeet}" var="_vyökoe" selectionMode="single" rows="10"
 		rowSelectListener="#{vyökoeAdmin.vyökoeValittu}">
 		<ace:column>
@@ -46,16 +48,11 @@
 			</h:panelGrid>
 		</h:panelGrid>
 	</ace:panel>
-	<h:commandButton rendered="#{vyökoeAdmin.vyökoe != null}" styleClass="ikoni"
-	 image="/kuvat/tallenna.jpg">
-		<ace:ajax execute="form:vyökoepanel" listener="#{vyökoeAdmin.tallennaVyökoe(harrastaja)}" render="@form" />
-	</h:commandButton>
+	<h:commandButton rendered="#{vyökoeAdmin.vyökoe != null}" styleClass="ikoni" image="/kuvat/tallenna.jpg"
+		actionListener="#{harrastajaAdmin.tallennaVyökoe(vyökoe)}" action="#{vyökoeAdmin.piilotaVyökoe}" />
 	<h:commandButton rendered="#{vyökoeAdmin.vyökoe != null}" value="x" styleClass="ikoni"
-		action="#{vyökoeAdmin.peruutaMuutos}" image="/kuvat/peruuta_muutos.png">
-		<ace:ajax render="@form" />
-	</h:commandButton>
-	<h:commandButton rendered="#{vyökoeAdmin.vyökoePoistettavissa}" value="x" styleClass="ikoni"
-		action="#{vyökoeAdmin.poistaVyökoe(harrastaja)}" image="/kuvat/poista.png" immediate="true">
-		<ace:ajax render="@form" />
-	</h:commandButton>
+		action="#{vyökoeAdmin.peruutaMuutos}" image="/kuvat/peruuta_muutos.png" />
+	<h:commandButton rendered="#{vyökoe.poistettavissa}" value="x" styleClass="ikoni"
+		actionListener="#{harrastajaAdmin.poistaVyökoe(vyökoe)}" action="#{vyökoeAdmin.piilotaVyökoe}"
+		image="/kuvat/poista.png" immediate="true" />
 </ui:composition>
