--- a/src/main/webapp/admin/harrastajat/harrastajat.xhtml
+++ b/src/main/webapp/admin/harrastajat/harrastajat.xhtml
@@ -27,10 +27,12 @@
 		<ace:tabPane label="Perustietot">
 			<ui:include src="perustiedot.xhtml" />
 		</ace:tabPane>
-		<ace:tabPane label="Maksutiedot">
+		<ace:tabPane label="Treenikäynnit">
 		</ace:tabPane>
 		<ace:tabPane label="Vyökokeet">
 			<ui:include src="vyökokeet.xhtml" />
+		</ace:tabPane>
+		<ace:tabPane label="Maksutiedot">
 		</ace:tabPane>
 		<ace:tabPane label="Kisatulokset">
 		</ace:tabPane>
