--- a/src/main/webapp/admin/harrastajat/harrastajat.xhtml
+++ b/src/main/webapp/admin/harrastajat/harrastajat.xhtml
@@ -28,6 +28,7 @@
 			<ui:include src="perustiedot.xhtml" />
 		</ace:tabPane>
 		<ace:tabPane label="Treenikäynnit">
+			<ui:include src="treenikäynnit.xhtml" />
 		</ace:tabPane>
 		<ace:tabPane label="Vyökokeet">
 			<ui:include src="vyökokeet.xhtml" />
@@ -37,6 +38,7 @@
 		<ace:tabPane label="Kisatulokset">
 		</ace:tabPane>
 		<ace:tabPane label="Roolit">
+			<ui:include src="roolit.xhtml" />
 		</ace:tabPane>
 	</ace:tabSet>
 </ui:composition>
