--- a/src/main/webapp/admin/ilmoittautumiset.xhtml
+++ b/src/main/webapp/admin/ilmoittautumiset.xhtml
@@ -1,8 +1,8 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:ace="http://www.icefaces.org/icefaces/components">
-	<h:commandButton action="#{ilmoittautumisAdmin.lisääIlmoittautuminen}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
-		immediate="true">
+	<h:commandButton action="#{ilmoittautumisAdmin.lisääIlmoittautuminen}" value="x" styleClass="ikoni"
+		image="/kuvat/lisää.png" immediate="true">
 		<ace:ajax render="@form" />
 	</h:commandButton>
 	<ace:dataTable value="#{treenikäynnit}" var="_treenikäynti" selectionMode="single"
@@ -22,17 +22,65 @@
 			<h:outputText value="#{_treenikäynti.treenisessio.treeni.päivä}" class="teksti" />
 		</ace:column>
 	</ace:dataTable>
-	<p/>
-	<ace:panel header="Treenikäynti" styleClass="panel" rendered="#{treenikäynti != null}">
-		<h:panelGrid columns="2" style="margin-left: 20px;">
-			<h:outputText value="Aikaleima" />
-			<h:panelGrid>
-				<ace:message for="form:aikaleima" />
-				<ace:dateTimeEntry value="#{treenikäynti.aikaleima}" renderAsPopup="true" pattern="dd.MM.yyyy HH:mm:ss"
-					id="aikaleima" />
+	<p />
+	<h:panelGrid columns="2" columnClasses="tabletop, tabletop" rendered="#{treenikäynti != null}">
+		<ace:panel header="Treenikäynti" styleClass="panel" style="width: 400px">
+			<h:panelGrid columns="2" style="margin-left: 20px;">
+				<h:outputText value="Aikaleima" />
+				<h:panelGrid>
+					<ace:message for="form:aikaleima" />
+					<ace:dateTimeEntry value="#{treenikäynti.aikaleima}" renderAsPopup="true" pattern="dd.MM.yyyy HH:mm:ss"
+						id="aikaleima" />
+				</h:panelGrid>
+				<h:outputText value="Harrastaja" />
+				<h:panelGrid>
+					<ace:message for="form:harrastaja" />
+					<!-- 				
+				<ace:dataTable value="#{harrastajat}" var="_harrastaja" selectionMode="single" id="harrastaja" rows="5" rowSelectListener="#{ilmoittautumisAdmin.harrastajaValittu}">
+					<ace:column headerText="Nimi" filterBy="#{_harrastaja.henkilö.nimi}" filterMatchMode="contains">
+						<h:outputText value="#{_harrastaja.henkilö.nimi}" />
+					</ace:column>
+				</ace:dataTable>
+				-->
+					<ace:autoCompleteEntry id="harrastaja" value="#{treenikäynti.harrastaja}" listVar="_h" listValue="#{harrastajat}"
+						filterBy="#{_h.henkilö.nimi}" converter="objectConverter">
+						<f:facet name="row">
+							<h:outputText value="#{_h.henkilö.nimi}" />
+						</f:facet>
+					</ace:autoCompleteEntry>
+					<!-- 				
+				<ace:autoCompleteEntry id="harrastaja" value="#{treenikäynti.harrastaja}" filterBy="#{_harrastaja.henkilö.nimi}" rows="5">
+					<f:selectItems value="#{harrastajat}" var="_h" itemLabel="#{_h.henkilö.nimi}" itemValue="#{_h}" />
+					<f:converter converterId="objectConverter" />
+				</ace:autoCompleteEntry>
+-->
+				</h:panelGrid>
+				<h:outputText value="Treeni" />
+				<h:panelGrid>
+					<ace:message for="form:treeni" />
+					<h:selectOneMenu value="#{treenikäynti.treenisessio.treeni}" id="treeni">
+						<f:selectItems value="#{treenit}" var="_treeni" itemValue="#{_treeni}" itemLabel="#{_treeni.nimi}" />
+						<f:converter converterId="objectConverter" />
+					</h:selectOneMenu>
+				</h:panelGrid>
+				<h:outputText value="Päivä" />
+				<h:panelGrid>
+					<ace:message for="form:päivä" />
+					<ace:dateTimeEntry value="#{treenikäynti.treenisessio.päivä}" renderAsPopup="true" pattern="dd.MM.yyyy" id="päivä" />
+				</h:panelGrid>
 			</h:panelGrid>
-		</h:panelGrid>
-	</ace:panel>
+		</ace:panel>
+		<ace:panel header="Vetäjät" styleClass="panel" style="width:500px">
+			<ace:listControl>
+				<ace:list value="#{treenivetäjät}" var="_vetäjä" selectionMode="multiple">
+					<h:outputText value="#{_vetäjä.henkilö.nimi}" />
+				</ace:list>
+				<ace:list value="#{treeni.vetäjät}" var="_vetäjä" selectionMode="multiple">
+					<h:outputText value="#{_vetäjä.henkilö.nimi}" />
+				</ace:list>
+			</ace:listControl>
+		</ace:panel>
+	</h:panelGrid>
 	<h:commandButton rendered="#{treenikäynti != null}" value="x" styleClass="ikoni"
 		action="#{ilmoittautumisAdmin.tallennaTreenikäynti}" image="/kuvat/tallenna.jpg" />
 	<h:commandButton rendered="#{treenikäynti != null}" value="x" styleClass="ikoni" immediate="true"
